--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,12 @@ main {
   flex: 1;
 }
 
+.btn-primary,
+.btn-outline-primary {
+  background-color: #f0c040;
+  color: #000000;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -40,4 +46,29 @@ main {
 }
 .img-thumbnail {
   height: 80px;
+}
+
+/*sidebar*/
+.navbar-brand {
+  font-weight: bold;
+}
+.side-navbar {
+  width: 240px;
+  height: 100%;
+  position: absolute;
+  left: -300px;
+  background-color: #100901;
+  transition: 0.5s;
+}
+
+.site-container {
+  transition: 0.4s;
+}
+
+.active-cont {
+  margin-left: 240px;
+}
+
+.active-nav {
+  left: 0;
 }
